Update japanese translation

--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1,8 +1,8 @@
 {
   "roles": "デザイナー・フロントエンドエンジニア",
   "intro": {
-    "headline": "デザインとエンジニアリングの両方の価値観を行き来して、ものづくりをしています。在学中なのですが、約2年デザイナー実務経験を経て、現在はスタートアップ会社でフロントエンドエンジニアとして経験しております。",
-    "subHeadline": "デザインで見た目にもわかりやすく色んな人に披露できる表現を行えることは好きのですが、黙々とそれこそ3年前頃はいくら徹夜をしても平気なくらいにコードを書いているのも好きでした。大変かもしれないのですが、どちらか一つを選ぶのではなく、逆転の発想でデザインとエンジニア面の両方の話ができて、ワンストップ（一気通貫）で依頼ができるWebサイト制作者を目指そうと思いました。"
+    "headline": "デザインとエンジニアリングの両方の価値観を行き来して、ものづくりをしています。現在は学生ですが、約2年デザイナー実務経験を経て、現在はスタートアップ会社でフロントエンドエンジニアとして経験しております。",
+    "subHeadline": "デザインで見た目にもわかりやすく色んな人に披露できる表現を行えることは好きのですが、黙々とそれこそ3年前頃はいくら徹夜をしても平気なくらいにコードを書いているのも好きでした。どちらか一つを選ぶのではなく、逆転の発想でデザインとエンジニア面の両方の話ができて、ワンストップ（一気通貫）で依頼ができるWebサイト制作者を目指したいと思います。"
   },
   "clientProjects": "クライアントプロジェクト",
   "karte": "不動産のアプリのインターラクティブなコンポーネントライブラリ",
